--- a/server/config/config.env
+++ b/server/config/config.env
@@ -1,2 +1,2 @@
+DB_URI=mongodb://127.0.0.1:27017/portfolio
 PORT=5000
-DB_URI=mongodb+srv://omkar:Omkarsasemongodb742ae@cluster0.pk26j.mongodb.net/Portfolio
