--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "engines": {
+    "node": "14.x",
+    "npm": "6.14.7"
+},
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
@@ -19,7 +23,7 @@
     "url": "https://github.com/21omkarsase/Portfolio-React.js-/issues"
   },
   "homepage": "https://github.com/21omkarsase/Portfolio-React.js-#readme",
-  "dependencies": {
+    "dependencies": {
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
