--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "engines": {
     "node": "14.x",
     "npm": "6.14.7"
-},
+  },
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "server": "nodemon server/server.js",
+    "dev": "concurrently \"npm run server\" \"cd client && npm run start\""
   },
   "repository": {
     "type": "git",
@@ -23,8 +23,9 @@
     "url": "https://github.com/21omkarsase/Portfolio-React.js-/issues"
   },
   "homepage": "https://github.com/21omkarsase/Portfolio-React.js-#readme",
-    "dependencies": {
+  "dependencies": {
     "body-parser": "^1.20.1",
+    "concurrently": "^8.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
